--- a/index.html
+++ b/index.html
@@ -12,28 +12,17 @@
     <p class="text-slate-400">Frame 1287</p>
     <div class="bg-blue-700 w-1/2 flex justify-between py-4 px-4">
     <img class="w-1/12" src="image/logo.png" alt="logo">
-    <button class="bg-orange-500 rounded-lg text-white h-10 px-7 mt-2" type="submit">+ Add Todo</button>
+    <button  class="bg-orange-500 rounded-lg text-white h-10 px-7 mt-2" type="submit">
+        <a href="index2.html">Add Todo</button></a>
     </div>
     <form>
-        <div class="bg-white px-10 w-1/2">
+        <div class="bg-white px-10 w-1/2 justify-center">
             <input class="border-2 border-gray-500 rounded-md w-full mt-10 mb-4 py-2 px-20" type="text"placeholder="Chicken Pizza" ><br>
             <input class="border-2 border-gray-500 rounded-md w-full mt-2 mb-4 py-2 px-20" type="text" placeholder="Chicken Pizza"><br>
             <input class="border-2 border-gray-500 rounded-md w-full mt-2 mb-4 py-2 px-20" type="text" placeholder="Chicken Pizza"><br>
             <input class="border-2 border-gray-500 rounded-md w-full mt-2 mb-4 py-2 px-20" type="text" placeholder="Chicken Pizza"><br>
         </div>
-        <br>
-        <p class="text-cyan-500 ">Frame 1288</p>
-        <div class="bg-blue-700 w-1/2 flex justify-between py-2 px-4">
-        <img class="w-1/12" src="image/logo.png" alt="logo">
-            <button class="bg-orange-500 rounded-lg text-white h-10 px-7 mt-2" type="submit">+ Add Todo</button>
-        </div>
-        <div class="bg-white px-10 w-1/2">
-            <label class="">Name Of Pizza</label>
-            <input class="border-2 border-gray-500 rounded-md w-full py-2 px-10 mt-2 " type="text" placeholder=""><br><br>
-            <button class="bg-orange-500 rounded-lg text-white h-10 px-5 ml-56 mb-20" type="submit">Add Todo</button>
-        </div>
-    </form>
-    <button class="bg-sky-500 text-white mt-2 px-1 ml-36" type="submit">2418X1413</button>
+        
 </nav>
 </header>
 <br><br><br><br>
