--- a/index2.html
+++ b/index2.html
@@ -6,10 +6,9 @@
     <title>Document</title>
     <link href="../src/output.css" rel="stylesheet">
 </head>
-<body  class="bg-black w-full mt-10">
-    <form class="px-20">
-    <p class="text-cyan-500 ">Frame 1288</p>
-    <div class="bg-blue-700 w-1/2 flex justify-between py-2 px-4">
+<body>
+    <form>
+    <div class="bg-blue-700 w-full flex justify-between py-2 px-4">
     <img class="w-1/12" src="image/logo.png" alt="logo">
         <button class="bg-orange-500 rounded-lg text-white h-10 px-7 mt-2" type="submit">+ Add Todo</button>
     </div>
